# CodingPath

./: .clang-format  .gitignore  README.md
Algorithms/GrokkingAlgorithms/: binary_search.py  dijkstra_shortest_path.py  merge_sort.py  quick_sort.py  recursive.py  selection_sort.py
Compiling/LinkersAndLoaders/: QuestionAnswers.md
Compiling/LinkingLoadingAndLib/: ManualNameMangling.cpp  ManualNameMangling.s  SimpleSection.c  SimpleSection.i  SimpleSection.s  SpecialSymbol.c  WeakRef.c  WeakRefThread.c
Cpp/C++InAction/: README.md
Cpp/ISO_CppFAQ/: MultiInheritance.cpp
Cpp/Misc/: CRTP.cpp  ChronoClocks.cpp  ContainerFilter.cpp  CtorCallVirtualFunc.cpp  CustomClock.cpp  CustomizedFormatter.cpp  DefaultArgsInVirtualFunc.cpp  DeleteArray.cpp  DesignatedInitialization.cpp  DtorThrow.cpp  EnumErrorCode.cpp  Expected.cpp  HighResClk.cpp  InitializationSequence.cpp  MapAccess.cpp  MultipleThisPointer.cpp  OOPWithC.c  PointerToMemberData.cpp  PointerToMemberFunction.cpp  Singleton.cpp  SizeOfEmptyClass.cpp  SortWithMemberDataKey.cpp  StrongTypeSystem.cpp  TimeTest.cpp  TimeZone.cpp  TypePunning.cpp  UnqualifiedSymbolLookup.cpp  ValueInitialize.cpp  VariadicClassTemplateArgs.cpp  VirtualDestructor.cpp  Vtable.cpp
Csharp/AppsAndServicesWithNet7/: .gitignore
Csharp/Asp.NetCoreInAction/: WebApplication1.sln
Csharp/CsharpInDepth/: CsharpInDepth.sln
Go/Go语言核心36讲/: 01.工作区和GOPATH.html  02.命令源码文件.html  03.库源码文件.html  04.程序实体的那些事儿（上）.html  05.程序实体的那些事儿（中）.html  06.程序实体的那些事儿 （下）.html  07.数组和切片.html  08.container包中的那些容器.html  09.字典的操作和约束.html  10.通道的基本操作.html  11.通道的高级玩法.html  12.使用函数的正确姿势.html  13.结构体及其方法的使用法门.html  14.接口类型的合理运用.html  15.关于指针的有限操作.html  16.go语句及其执行规则（上）.html  17.go语句及其执行规则（下）.html  18.if语句、for语句和switch语句.html  19.错误处理（上）.html  20.错误处理 （下）.html  21.panic函数、recover函数以及defer语句 （上）.html  22.panic函数、recover函数以及defer语句（下）.html  23.测试的基本规则和流程 （上）.html  24.测试的基本规则和流程（下）.html  25.更多的测试手法.html  26.sync.Mutex与sync.RWMutex.html  27.条件变量sync.Cond （上）.html  28.条件变量sync.Cond （下）.html  29.原子操作（上）.html  30.原子操作（下）.html  31.sync.WaitGroup和sync.Once.html  32.context.Context类型.html  33.临时对象池sync.Pool.html  34.并发安全字典sync.Map （上）.html  35.并发安全字典sync.Map (下).html  36.unicode与字符编码.html  37.strings包与字符串操作.html  38.bytes包与字节串操作（上）.html  39.bytes包与字节串操作（下）.html  40.io包中的接口和工具 （上）.html  (+13 more)
Lua/Programming In Lua 4th Ed/: demo.lua
OS/BaremetalCppProgram/: Makefile  asm_func.nas  bochsrc-floppy_disk.bxrc  bochsrc-hard_drive.bxrc  bochsrc.bxrc  entry.c  entry.s  kernel-helloworld.nas  (+9 more)
OS/Misc/Polling/: CMakeLists.txt
OS/Misc/Polling/src/: main.c
OS/TheLinuxProgrammingInterface/chap20/RecvSendSignals/: CMakeLists.txt
OS/TheLinuxProgrammingInterface/chap20/RecvSendSignals/src/: receiver.c  sender.c
OS/TheLinuxProgrammingInterface/chap22/RtSignal/: CMakeLists.txt
OS/TheLinuxProgrammingInterface/chap5/TryFcntl/: CMakeLists.txt
OS/TheLinuxProgrammingInterface/chap5/TryFcntl/src/: TryFcntl.c
Python/MiscExercises/packaging_guide/: README.md  pyproject.toml
Python/MiscExercises/packaging_guide/src/example_package_lizan/: calculator.py
Tools/CMake/ModernCMakeForC++/chap10/cxx_modules/: CMakeLists.txt  main.cpp  math.cppm
Tools/CMake/ModernCMakeForC++/chap11/with_catch2/test/: CMakeLists.txt  calc_test.cpp  program_test.cpp
Tools/CMake/ModernCMakeForC++/chap11/with_coverage/src/: CMakeLists.txt  main.cpp  rng.hpp  rng_mt19937.cpp  rng_mt19937.hpp
Tools/CMake/ModernCMakeForC++/chap11/with_coverage/test/: CMakeLists.txt  calc_test.cpp
Tools/CMake/ModernCMakeForC++/chap11/with_coverage/test/mocks/: rng_mock.hpp
Tools/CMake/ModernCMakeForC++/chap11/with_gmock/src/: CMakeLists.txt  calc.cpp  calc.hpp  start_program.cpp
Tools/CMake/ModernCMakeForC++/chap12/clang_tidy/src/: CMakeLists.txt  calc.cpp  main.cpp  start_program.cpp
Tools/CMake/ModernCMakeForC++/chap12/valgrind/test/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap14/config_simple/program/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap14/cpack_package/src/: CMakeLists.txt  main.cpp
Tools/CMake/ModernCMakeForC++/chap14/install_directory/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap14/install_directory/data/: data.csv
Tools/CMake/ModernCMakeForC++/chap14/install_directory/etc/: sample.conf
Tools/CMake/ModernCMakeForC++/chap14/install_directory/etc/calc/: calc.conf
Tools/CMake/ModernCMakeForC++/chap14/install_directory/src/: CMakeLists.txt  calc.cpp  ext_calc.cpp  main.cpp
Tools/CMake/ModernCMakeForC++/chap14/install_directory/src/include/calc/extended/: ext_calc.hpp
Tools/CMake/ModernCMakeForC++/chap14/install_directory/src/include/calc/ignored/: scientific_calc.hpp
Tools/CMake/ModernCMakeForC++/chap14/install_targets_legacy/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap14/install_targets_legacy/src/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap4/env_info/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap4/forbid_in_src_build/: CMakeCache.txt  CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap5/custom_cmd/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap5/fake_targets/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap5/property_propagate/: CMakeLists.txt  empty.cpp
Tools/CMake/ModernCMakeForC++/chap6/toolchain_config/: CMakeLists.txt  main.cpp
Tools/CMake/ModernCMakeForC++/chap7/add_target_source/: CMakeLists.txt  linux.cpp  main.cpp  windows.cpp
Tools/CMake/ModernCMakeForC++/chap7/generate_header/: CMakeLists.txt  configure.hpp.in  main.cpp
Tools/CMake/ModernCMakeForC++/chap7/optimization/: CMakeLists.txt
Tools/CMake/ModernCMakeForC++/chap8/dll_sym_resolve_order/: CMakeLists.txt  main.cpp  shared_lib_1.cpp  shared_lib_2.cpp
Tools/CMake/ModernCMakeForC++/chap8/so_gen/: CMakeLists.txt  main.cpp  shared_lib.cpp  shared_lib.hpp  static_lib.cpp  static_lib.hpp
Tools/CMake/ModernCMakeForC++/chap8/static_lib_dependency_resolve/: CMakeLists.txt  main.cpp  static_lib_1.cpp  static_lib_2.cpp
Tools/CMake/ModernCMakeForC++/chap9/pkg_protoc/: CMakeLists.txt  main.cpp  message.proto
Tools/CMake/ModernCMakeForC++/chap9/pkg_yaml/: CMakeLists.txt  config.yaml  main.cpp
(+3495 files in other folders)
