[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_lizan"
version = "0.0.1"
authors = [
    { name="Lizan", email="lizan@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lizanx/CodingPath/tree/main/Python/MiscExercises"
