cmake_minimum_required(VERSION 3.20.0)
project(sys_info)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

message("System: ${CMAKE_SYSTEM_NAME} - ${CMAKE_SYSTEM_VERSION}")
message("Host: ${CMAKE_HOST_SYSTEM}(${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_HOST_SYSTEM_VERSION}, processor: ${CMAKE_HOST_SYSTEM_PROCESSOR})")
if(${CMAKE_SIZEOF_VOID_P} EQUAL 8)
    message("64-bit system")
elseif(${CMAKE_SIZEOF_VOID_P} EQUAL 4)
    message("32-bit system")
else()
    message("Strange pointer size: ${CMAKE_SIZEOF_VOID_P}byte")
endif()
message("Byte order: ${CMAKE_CXX_BYTE_ORDER}")

include(CheckIPOSupported)
check_ipo_supported(RESULT ipo_supported)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
message("Support for link time optimization: ${ipo_supported}")

list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_26 support_cxx_26)
if(${support_cxx_26} EQUAL -1)
    message("Doesn't support C++26 yet!")
else()
    message("Already support C++26!")
endif()

add_executable(sys_info main.cpp)
